--- a/Dev/css/style.css
+++ b/Dev/css/style.css
@@ -1,5 +1,5 @@
 table {
-	display: table;
+  display: table;
     border-collapse: separate;
     border-spacing: 2px;
     border-color: gray;
@@ -7,59 +7,65 @@ table {
     background: #eee;
 
 }
+body {
+  margin:0;
+  font-family: "Futura", Verdana, sans-serif;
+}
 
+a {
+  text-decoration: none;
+}
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 /*SIDEBAR*/
 
 .sidebar-container {
   background: #2b303b;
   bottom: 0;
   color: purple;
-  font-family: "Futura", Verdana, sans-serif;
+  position:fixed;
   left: 0;
-  position: absolute;
+  float:left;
   top: 0;
   width: 200px;
-  height: 800px;
+  height: 100%;
   transition-duration: .7s;
 /*  left: -150px;
 */
 }
 .sidebar-container a {
-	background: #eee;
-	padding: 20px 0 20px 0;
-	border: 1px solid #2b303b;
-	display: block;
-	text-decoration: none;
-	margin-left: -40px;
-	text-align: center;
+  padding: 15px;
+  color: #70798C;
+  display: block;
+  text-decoration: none;
 }
 /*.sidebar-container:hover {
-	margin-left: -175px;
-	transition-duration: .7s;
+  margin-left: -175px;
+  transition-duration: .7s;
 }*/
 
 /*TOP NAVIGATION */
 
 .top-nav {
-  height: 50px;
-  width: 100%;
-  text-align: right;
+  padding:15px;
+  border-bottom: 1px solid #f5f5f5;
 }
 .top-nav a {
   text-align: right;
   padding: 20px;
-  background: #eee;
 }
 
 
 
 /*DASHBOARD GRID LAYOUT*/
 .dashboard {
-  float: right;
-  width: 83%;
-  text-align: center;
-  font-family: "Futura", Verdana, sans-serif;
-
+  margin-left:200px;
+}
+.dashboard-content {
+  padding:30px;
 }
 
 .dash_title {
@@ -73,23 +79,24 @@ table {
   float: left;
   width: 100%;
 }
-
+.panel {
+  border: 1px solid #d8d8d8;
+  background: #fff;
+  border-radius: 2px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+}
 .game_stats {
   height: 250px;
-  background: #eee;
   margin: 0 0 10px 0;
   width: 72%;
   float: left;
-  border: 1px solid black;
 }
 
 .current-badge {
-  background: #eee;
   margin: 0 3% 0 0;
   width: 22%;
   float: left;
   height: 240px;
-  border: 1px solid black;
 }
 .cb-chart {
   background: green;
@@ -101,12 +108,10 @@ table {
 }
 
 .next-badge {
-  background: #eee;
   margin: auto;
   width: 22%;
   float: left;
   height: 240px;
-  border: 1px solid black;
 }
 .nb-chart {
   background: blue;
@@ -116,12 +121,10 @@ table {
   margin: 0 auto;
 }
 .third-badge {
-  background: #eee;
   margin: auto;
   width: 22%;
   float: left;
   height: 240px;
-  border: 1px solid black;
   margin: 0 0 0 2.8%;
 }
 .tb-chart {
@@ -134,11 +137,9 @@ table {
 
 .leaderboard {
   height: 500px;
-  background: #eee;
   width: 25%;
   float: right;
   margin: 0 0 0 15px;
-  border: 1px solid black;
 }
 
 
