--- a/Dev/css/style.css
+++ b/Dev/css/style.css
@@ -8,7 +8,6 @@ table {
 
 }
 body {
-  margin:0;
   font-family: "Futura", Verdana, sans-serif;
 }
 
@@ -20,10 +19,19 @@ ul {
   padding: 0;
   list-style: none;
 }
+/*h2 {
+  font-size: 2em;
+}*/
 /*SIDEBAR*/
 
+.side_profile img {
+  border-radius: 100px;
+  height: 100px;
+  width: 100px;
+}
+
 .sidebar-container {
-  background: #2b303b;
+  background: #0A3E5B;
   bottom: 0;
   color: purple;
   position:fixed;
@@ -36,6 +44,13 @@ ul {
 /*  left: -150px;
 */
 }
+.sidebar-container img {
+  height: 50%;
+  width: 100%;
+}
+.logo {
+  background: white;
+}
 .sidebar-container a {
   padding: 15px;
   color: #70798C;
@@ -43,7 +58,7 @@ ul {
   text-decoration: none;
 }
 .sidebar-container a:hover {
-  background: #eee;
+  background: #FFAF49;
 /*  margin-left: -175px;
   transition-duration: .7s;*/
 }
@@ -53,13 +68,14 @@ ul {
 .top-nav {
   padding:15px;
   border-bottom: 1px solid #f5f5f5;
+    text-align: right;
+
 }
 .top-nav a {
-  text-align: right;
   padding: 20px;
 }
 .top-nav a:hover {
-  background: #70798C;
+  background: #FFAF49;
 }
 
 
@@ -67,6 +83,7 @@ ul {
 /*DASHBOARD GRID LAYOUT*/
 .dashboard {
   margin-left:200px;
+  text-align: center;
 }
 .dashboard-content {
   padding:30px;
@@ -94,6 +111,12 @@ ul {
   margin: 0 0 10px 0;
   width: 72%;
   float: left;
+  font-size: 1em;
+  text-transform: uppercase;
+  text-align: left;;
+}
+.game_stats a {
+  padding: 10px;
 }
 
 .current-badge {
@@ -103,7 +126,7 @@ ul {
   height: 240px;
 }
 .cb-chart {
-  background: green;
+  background: #FFAF49;
   height: 100px;
   width: 100px;
   border-radius: 100px;
@@ -118,7 +141,7 @@ ul {
   height: 240px;
 }
 .nb-chart {
-  background: blue;
+  background: #FFAF49;
   height: 100px;
   width: 100px;
   border-radius: 100px;
@@ -131,19 +154,69 @@ ul {
   height: 240px;
   margin: 0 0 0 2.8%;
 }
-.tb-chart {
+.third-badge p {
+  font-size: 2.5em;
+}
+/*.tb-chart {
   background: red;
   height: 100px;
   width: 100px;
   border-radius: 100px;
   margin: 0 auto;
 }
-
+*/
 .leaderboard {
   height: 500px;
   width: 25%;
   float: right;
   margin: 0 0 0 15px;
+  text-transform: uppercase;
+}
+.leaderboard li {
+  background: #0A3E5B;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  padding: 20px 0 20px 0;
+  float: bottom;
+
 }
 
+/*PROFILE*/ 
+
+/*BIO*/
+.bio {
+  background: #0A3E5B;
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  margin-top: 10%;
+  color: white;
+  text-align: right;
+}
+
+.bio h3 {
+  font-size: 3em;
+}
+.bio p {
+  text-align: center;
+}
+
+.bio img {
+  float: left;
+}
+/*RANK PROGRESS*/
+.rank_progress {
+  text-transform: uppercase;
+  font-size: 1.75em;
+  margin: 3%;
+}
+.ui-widget-header {
+  background:  #FFAF49;
+}
+/*GAME_STATS */
+/*.game_stats {
+  text-transform: uppercase;
+  font-size: 2em;
+  margin: 0;
+}*/
 
